import { MigrationInterface, QueryRunner } from 'typeorm';
export class InitialSchema1770000000000 implements MigrationInterface {
  async up(q: QueryRunner): Promise<void> { await q.query(`CREATE EXTENSION IF NOT EXISTS "pgcrypto";
CREATE TABLE users (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), email varchar(320) UNIQUE NOT NULL, password_hash text NOT NULL, full_name varchar(200) NOT NULL, phone varchar(40), roles text NOT NULL DEFAULT '', created_at timestamptz NOT NULL DEFAULT now(), updated_at timestamptz NOT NULL DEFAULT now());
CREATE TABLE auth_sessions (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), user_id uuid NOT NULL REFERENCES users(id) ON DELETE RESTRICT, active_role varchar(30) NOT NULL, version integer NOT NULL DEFAULT 1, expires_at timestamptz NOT NULL, revoked_at timestamptz);
CREATE TABLE student_profiles (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), user_id uuid UNIQUE NOT NULL REFERENCES users(id), university varchar(200), major varchar(200), graduation_year smallint, bio text, skills jsonb NOT NULL DEFAULT '[]', preferences jsonb NOT NULL DEFAULT '{}', updated_at timestamptz NOT NULL DEFAULT now());
CREATE TABLE companies (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), name varchar(200) UNIQUE NOT NULL, website varchar(2048), industry varchar(100), description text, staff_user_ids text NOT NULL DEFAULT '', created_at timestamptz NOT NULL DEFAULT now(), updated_at timestamptz NOT NULL DEFAULT now());
CREATE TABLE postings (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), company_id uuid NOT NULL REFERENCES companies(id), title varchar(200) NOT NULL, description text NOT NULL, category varchar(100), location varchar(200), work_arrangement varchar(30) NOT NULL, duration_weeks integer NOT NULL CHECK(duration_weeks > 0), openings integer NOT NULL CHECK(openings > 0), application_deadline date NOT NULL, status varchar(30) NOT NULL DEFAULT 'DRAFT', skills jsonb NOT NULL DEFAULT '[]', created_by_user_id uuid NOT NULL REFERENCES users(id), created_at timestamptz NOT NULL DEFAULT now(), updated_at timestamptz NOT NULL DEFAULT now());
CREATE TABLE saved_postings (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), student_id uuid NOT NULL REFERENCES users(id), posting_id uuid NOT NULL REFERENCES postings(id), saved_at timestamptz NOT NULL DEFAULT now(), UNIQUE(student_id, posting_id));
CREATE TABLE applications (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), student_id uuid NOT NULL REFERENCES users(id), posting_id uuid NOT NULL REFERENCES postings(id), status varchar(30) NOT NULL DEFAULT 'SUBMITTED', snapshot jsonb NOT NULL, cover_note text NOT NULL CHECK(length(trim(cover_note)) > 0), submitted_at timestamptz NOT NULL DEFAULT now(), updated_at timestamptz NOT NULL DEFAULT now(), UNIQUE(student_id, posting_id));
CREATE TABLE application_status_history (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), application_id uuid NOT NULL REFERENCES applications(id), from_status varchar(30), to_status varchar(30) NOT NULL, actor_user_id uuid NOT NULL REFERENCES users(id), note text, changed_at timestamptz NOT NULL DEFAULT now());
CREATE TABLE placements (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), application_id uuid UNIQUE NOT NULL REFERENCES applications(id), student_id uuid NOT NULL REFERENCES users(id), posting_id uuid NOT NULL REFERENCES postings(id), company_id uuid NOT NULL REFERENCES companies(id), supervisor_user_id uuid NOT NULL REFERENCES users(id), start_date date NOT NULL, end_date date NOT NULL CHECK(end_date >= start_date), status varchar(30) NOT NULL DEFAULT 'ACTIVE', created_at timestamptz NOT NULL DEFAULT now());
CREATE TABLE tasks (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), placement_id uuid NOT NULL REFERENCES placements(id), title varchar(200) NOT NULL CHECK(length(trim(title)) > 0), description text NOT NULL CHECK(length(trim(description)) > 0), priority varchar(20) NOT NULL, due_date date, status varchar(30) NOT NULL DEFAULT 'TODO', created_at timestamptz NOT NULL DEFAULT now());
CREATE TABLE notifications (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), recipient_user_id uuid NOT NULL REFERENCES users(id), type varchar(50) NOT NULL, title varchar(200) NOT NULL, body text, target_id uuid, read_at timestamptz, created_at timestamptz NOT NULL DEFAULT now());
CREATE INDEX notifications_recipient_idx ON notifications(recipient_user_id, read_at, created_at DESC); CREATE INDEX postings_discovery_idx ON postings(status, application_deadline, created_at DESC);`); }
  async down(q: QueryRunner): Promise<void> { await q.query('DROP TABLE IF EXISTS notifications, tasks, placements, application_status_history, applications, saved_postings, postings, companies, student_profiles, auth_sessions, users CASCADE'); }
}
